@@ -28,18 +28,19 @@ package ch.ethz.biol.cell.imageprocessing.chnl.provider;
 
 
 import java.util.List;
+import java.util.stream.Stream;
 
 import org.anchoranalysis.bean.annotation.BeanField;
 import org.anchoranalysis.core.error.CreateException;
 import org.anchoranalysis.core.error.friendly.AnchorImpossibleSituationException;
-import org.anchoranalysis.core.geometry.Point3i;
 import org.anchoranalysis.image.bean.provider.ChnlProviderOne;
 import org.anchoranalysis.image.bean.provider.ObjMaskProvider;
-import org.anchoranalysis.image.chnl.Chnl;
-import org.anchoranalysis.image.objmask.ObjMask;
-import org.anchoranalysis.image.objmask.ObjMaskCollection;
+import org.anchoranalysis.image.channel.Channel;
+import org.anchoranalysis.image.objectmask.ObjectMask;
+import org.anchoranalysis.image.objectmask.ObjectCollection;
 import org.anchoranalysis.image.objmask.match.ObjWithMatches;
 import org.anchoranalysis.image.voxel.box.VoxelBox;
+import org.apache.commons.math3.util.Pair;
 
 import ch.ethz.biol.cell.imageprocessing.objmask.matching.ObjMaskMatchUtilities;
 
@@ -56,43 +57,42 @@ public class ChnlProviderAssignFromIntersectingObjects extends ChnlProviderOne {
 	// END BEAN PROPERTIES
 	
 	@Override
-	public Chnl createFromChnl(Chnl chnl) throws CreateException {
+	public Channel createFromChnl(Channel chnl) throws CreateException {
 		
 		VoxelBox<?> vb = chnl.getVoxelBox().any();
 		
-		ObjMaskCollection objsSrcCollection = objsSource.create();
-		ObjMaskCollection objsTargetCollection = objsTarget.create();
+		ObjectCollection source = objsSource.create();
+		ObjectCollection target = objsTarget.create();
 
-		List<ObjWithMatches> matchList = matchIntersectingObjectsSingle( objsSrcCollection, objsTargetCollection );
-		for( ObjWithMatches own : matchList ) {
-			
-			int level = getValForMask( chnl, own.getSourceObj() );
-			assert(own.getMatches().size()==1);
-			
-			vb.setPixelsCheckMask( own.getMatches().get(0), level);
-		}
+		streamIntersectingObjects(source, target).forEach(pair->
+			vb.setPixelsCheckMask(
+				pair.getSecond(),
+				getValForMask( chnl, pair.getFirst() )
+			)
+		);
 		return chnl;
 	}
-	
-	
-	// Matches each object in objsSrc against objsTarget ensuring that it is a one-to-one mapping
-	public static List<ObjWithMatches> matchIntersectingObjectsSingle( ObjMaskCollection objsSrc, ObjMaskCollection objsTarget ) {
 		
-		List<ObjWithMatches> matchList = ObjMaskMatchUtilities.matchIntersectingObjects( objsSrc, objsTarget );
+	/**
+	 * Matches each object in objsSrc against objsTarget ensuring that it is a one-to-one mapping
+	 * 
+	 * @param source
+	 * @param target
+	 * @return a pair with source object (left) and the matched object (right)
+	 */
+	private static Stream<Pair<ObjectMask,ObjectMask>> streamIntersectingObjects(ObjectCollection source, ObjectCollection target) {
 		
-		for( ObjWithMatches own : matchList ) {
-			
-			ObjMask selectedObj = selectBestMatch( own.getSourceObj(), own.getMatches() );
-			
-			// We make sure the object only matches this item
-			own.getMatches().clear();
-			own.getMatches().add(selectedObj);
-		}
-		
-		return matchList;
+		List<ObjWithMatches> matchList = ObjMaskMatchUtilities.matchIntersectingObjects(source, target);
+				
+		return matchList.stream().map( owm->
+			new Pair<>(
+				owm.getSourceObj(),
+				selectBestMatch( owm.getSourceObj(), owm.getMatches() )
+			)
+		);
 	}
 	
-	private static ObjMask selectBestMatch( ObjMask source, ObjMaskCollection matches ) {
+	private static ObjectMask selectBestMatch( ObjectMask source, ObjectCollection matches ) {
 		assert(matches.size()>0);
 		
 		if (matches.size()==1) {
@@ -100,8 +100,8 @@ public class ChnlProviderAssignFromIntersectingObjects extends ChnlProviderOne {
 		}
 		
 		int maxIntersection = -1;
-		ObjMask omMostIntersecting = null;
-		for( ObjMask om : matches) {
+		ObjectMask omMostIntersecting = null;
+		for( ObjectMask om : matches) {
 			int intersectingPixels = source.countIntersectingPixels(om);
 			if (intersectingPixels > maxIntersection) {
 				omMostIntersecting = om;
@@ -111,15 +111,13 @@ public class ChnlProviderAssignFromIntersectingObjects extends ChnlProviderOne {
 		return omMostIntersecting;
 	}
 
-	private int getValForMask( Chnl chnl, ObjMask om ) {
+	private static int getValForMask( Channel chnl, ObjectMask om ) {
 		
 		VoxelBox<?> vb = chnl.getVoxelBox().any();
-		
-		Point3i pnt = om.findAnyPntOnMask().orElseThrow( ()->
-			new AnchorImpossibleSituationException()
+ 
+		return vb.getVoxel(
+			om.findArbitraryOnVoxel().orElseThrow(AnchorImpossibleSituationException::new)
 		);
-		int a = vb.getVoxel(pnt.getX(), pnt.getY(), pnt.getZ());
-		return a;
 	}
 	
 	public ObjMaskProvider getObjsSource() {
